--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "postcss-scss": "^4.0.3",
     "prettier": "^2.5.1",
     "sass": "^1.47.0",
-    "vite": "^2.7.2"
+    "stylelint": "^14.3.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "vite": "^2.7.2",
+    "vite-plugin-html-purgecss": "^0.1.1"
   }
 }
